--- a/index.html
+++ b/index.html
@@ -4,41 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Responsive Webpage</title>
+    <title>Dosreb.com</title>
     <!-- Link CSS -->
-    <link rel="stylesheet" href="styles.css">
+    styles.css
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to Dosreb</h1>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li>#homeHome</a></li>
+                <li>#aboutAbout</a></li>
+                <li>#contactContact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
+        <section id="home">
+            <h2>Home</h2>
+            <p>Welcome to Dosreb.com – your interactive experience starts here!</p>
+        </section>
+
         <section id="about">
-            <h2>About Me</h2>
-            <p>This is a short description about me or my project.</p>
+            <h2>About Us</h2>
+            <p>Dosreb is dedicated to providing innovative solutions for your needs.</p>
         </section>
 
-        <section id="updates">
-            <h2>Latest Updates</h2>
-            <p>Here you can share news, blog posts, or updates.</p>
-        </section>
-
-        <!-- Customer Service Section -->
-        <section id="customer-service">
+        <section id="contact">
             <h2>Customer Service</h2>
             <div class="agent-card">
-                <img src="lumi-profile.jpg" alt="Lumi Saarinen" class="agent-photo">
+                lumi-profile.jpg
                 <h3>Lumi Saarinen</h3>
                 <p>Customer Service Agent</p>
-                <p>Email: <a href="mailto:lumi.saarinen@example.com">lumi.saarinen@example.com</a></p>
+                <p>Email: lumi.saarinen@example.comlumi.saarinen@example.com</a></p>
                 <p>Phone: +358 40 123 4567</p>
                 <button id="chat-btn">💬 Chat with Lumi</button>
             </div>
@@ -46,7 +45,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 My Website | All rights reserved.</p>
+        <p>&copy; 2025 Dosreb.com | All rights reserved.</p>
     </footer>
 
     <!-- Chat Box -->
@@ -63,74 +62,6 @@
     </div>
 
     <!-- Link JavaScript -->
-    <script src="script.js"></script>
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Responsive Webpage</title>
-    <!-- Link CSS -->
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>Welcome to My Website</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>This is a short description about me or my project.</p>
-        </section>
-
-        <section id="updates">
-            <h2>Latest Updates</h2>
-            <p>Here you can share news, blog posts, or updates.</p>
-        </section>
-
-        <!-- Customer Service Section -->
-        <section id="customer-service">
-            <h2>Customer Service</h2>
-            <div class="agent-card">
-                <img src="lumi-profile.jpg" alt="Lumi Saarinen" class="agent-photo">
-                <h3>Lumi Saarinen</h3>
-                <p>Customer Service Agent</p>
-                <p>Email: <a href="mailto:lumi.saarinen@example.com">lumi.saarinen@example.com</a></p>
-                <p>Phone: +358 40 123 4567</p>
-                <button id="chat-btn">💬 Chat with Lumi</button>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 My Website | All rights reserved.</p>
-    </footer>
-
-    <!-- Chat Box -->
-    <div id="chat-box" class="hidden">
-        <div class="chat-header">
-            <span>Chat with Lumi Saarinen</span>
-            <button id="close-chat">✖</button>
-        </div>
-        <div class="chat-body" id="chat-body">
-            <p><strong>Lumi:</strong> Hello! How can I help you today?</p>
-        </div>
-        <input type="text" id="chat-input" placeholder="Type your message...">
-        <button id="send-msg">Send</button>
-    </div>
-
-    <!-- Link JavaScript -->
-    <script src="script.js"></script>
+    script.js</script>
 </body>
 </html>
